<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TelaPrincipal">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/book"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_cadastrar"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pesquisarpor"
        android:textSize="25dp"
        android:textColor="#000000"/>

    <RadioGroup
        android:id="@+id/rdgpesquisarPor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtPesquisarPorTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_titulo"
            android:checked="true"
            android:textSize="20dp"/>

        <RadioButton
            android:id="@+id/rbtPesquisarPorAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ano"

            android:textSize="20dp"/>


        <RadioButton
            android:id="@+id/rbtPesquisarTodos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_pesquisar_todos"

            android:textSize="20dp"/>


    </RadioGroup>

    <EditText
        android:id="@+id/edtPesquisar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnPesquisar"
            android:text="@string/txt_pesquisar"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


</LinearLayout>